[package]
name = "scrubcsv"
version = "0.1.2"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Remove bad lines from large CSV files and normalize the rest"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/scrubcsv"
homepage = "https://github.com/faradayio/scrubcsv"

[profile.dev]
# We always want to be fast, even in debug mode.  Comment this out for much
# faster compiles.
opt-level = 3

[dependencies]
csv = "1.0.0-beta.4"
docopt = "0.8"
env_logger = "0.4"
error-chain = "0.10"
humansize = "1.0.1"
libc = "0.2.18"
log = "0.3.6"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
time = "0.1.35"

[dev-dependencies]
cli_test_dir = "0.1.1"
