[package]
name = "scrubcsv"
version = "0.1.3"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Remove bad lines from large CSV files and normalize the rest"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/scrubcsv"
homepage = "https://github.com/faradayio/scrubcsv"

[profile.dev]
# We always want to be fast, even in debug mode.  Comment this out for much
# faster compiles.
opt-level = 3

[dependencies]
csv = "1"
docopt = "1"
env_logger = "0.6"
error-chain = "0.12"
humansize = "1.0.1"
lazy_static = "1.2.0"
libc = "0.2.18"
log = "0.4"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
time = "0.1.35"

[dev-dependencies]
cli_test_dir = "0.1.1"
